# monimate_cda

./: .bandit  .env  .gitignore  .gitlab-ci.yml  .gitlab-ci2.yml  .pylintrc  Dockerfile  Makefile  README.md  app_test.py  mypy.ini  pyproject.toml  reminder.md  results.xml  run.py
app/: __init__.py  extensions.py
app/enums/: GoalStatusEnum.py  PaymentFrequencyEnum.py  TicketStatusEnum.py  goal_status_enum.py  payment_frequency_enum.py  ticket_status_enum.py
app/models/: Account.py  Category.py  Goal.py  Income.py  Invoice.py  Message.py  Participant.py  PaymentOption.py  Ticket.py  Transaction.py  User.py  UserPreference.py
app/repositories/: AccountRepository.py  CategoryRepository.py  GoalRepository.py  IncomeRepository.py  InvoiceRepository.py  MessageRepository.py  PartcipantRepository.py  PaymentOptionRepository.py  TicketRepository.py  TransactionRepository.py  UserPreferenceRepository.py  UserRepository.py
app/routes/: categories.py  users.py
app/static/css/: style.css
app/static/downloads/: file.txt
app/templates/: base.html  download.html  filters.html  index.html  indexe.html
app/test/integration/: test_users.py
migrations/versions/: 398e25ca42c2_.py  a1a9b9eb157c_.py  f3845ac13169_add_default_values_to_user_table.py
test/integration/: test_users.py
tests/integration/: test_users.py
