[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Ines Berber",email = "inesberber92@gmail.com "}
]
packages = [
    { include = "tests" }
]
readme = "README.md"
requires-python = ">=3.9,<4.0"

dependencies = [
    "networks (>=0.3.7,<0.4.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "bandit (>=1.8.3,<2.0.0)",
    "pylint (>=3.3.6,<4.0.0)",
    "autopep8 (>=2.3.2,<3.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "flask-bcrypt (>=1.0.1,<2.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "flask-cors (>=5.0.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
