[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Ines Berber",email = "inesberber92@gmail.com "}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "psycopg2 (>=2.9.10,<3.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "flask-bcrypt (>=1.0.1,<2.0.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "bandit (>=1.8.3,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "blinker (>=1.9.0,<2.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "mypy (>=1.15.0,<2.0.0)",
    "pip (>=25.0.1,<26.0.0)",
    "pycodestyle (>=2.13.0,<3.0.0)",
    "pylint (>=3.3.6,<4.0.0)",
    "pyflakes (>=3.3.0,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "flask-cors (>=5.0.1,<6.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "mako (>=1.3.9,<2.0.0)",
    "markupsafe (>=3.0.2,<4.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pygments (>=2.19.1,<3.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "astroid (>=3.3.9,<4.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "dill (>=0.3.9,<0.4.0)",
    "iniconfig (>=2.1.0,<3.0.0)",
    "markdown-it-py (>=3.0.0,<4.0.0)",
    "mccabe (>=0.7.0,<0.8.0)",
    "mdurl (>=0.1.2,<0.2.0)",
    "setuptools (>=78.1.0,<79.0.0)",
    "stevedore (>=5.4.1,<6.0.0)",
    "tomlkit (>=0.13.2,<0.14.0)",
    "typing-extensions (>=4.13.0,<5.0.0)",
    "pluggy (>=1.5.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
